objects/project_cloud__Project_Task__c.object
<CustomObject>
    <description>Tasks that form the individual work effort components of the project. Each task can be assigned, managed and collaborated on with you team.</description>
    <fields>
        <fullName>ccpe_r__Budgeted_Labor_Cost__c</fullName>
        <formula>project_cloud__Work_Type__r.ccpe_r__Default_Skill_Cost__c * project_cloud__Estimated_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budgeted Labor Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Cost__c</fullName>
        <label>Calculated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Rate__c</fullName>
        <label>Calculated Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Utilization_Category__c</fullName>
        <label>Utilization Category</label>
        <picklist>
            <picklistValues>
                <fullName>Billable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Billable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>project_cloud__Allocated_End__c</fullName>
        <description>This is the end date of the last allocation for all users allocated to a task</description>
        <inlineHelpText>The end date of the last allocation of users to the Project Task</inlineHelpText>
        <label>Allocated End</label>
        <summarizedField>project_cloud__Total_Allocation__c.project_cloud__End__c</summarizedField>
        <summaryForeignKey>project_cloud__Total_Allocation__c.project_cloud__Project_Task__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Allocated_Hours__c</fullName>
        <description>The total number of hours allocated to this Project Task</description>
        <inlineHelpText>The total number of hours allocated to this Project Task</inlineHelpText>
        <label>Allocated Hours</label>
        <summarizedField>project_cloud__Total_Allocation__c.project_cloud__Hours__c</summarizedField>
        <summaryForeignKey>project_cloud__Total_Allocation__c.project_cloud__Project_Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Allocated__c</fullName>
        <description>This field does the same as the IsAllocated field. It has been deprecated because it was created before Checkbox formula&apos;s were available.</description>
        <formula>IF(project_cloud__IsAllocated__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
        <label>Allocated (deprecated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Autonomous_Start__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>User entered value indicating the desired start date when there are no dependencies.</description>
        <inlineHelpText>The start date desired for the Project Task. (NOTE If the task is dependent upon other tasks, the actual start date will be immediately after the preceding task completes, and not the cannot start before date).</inlineHelpText>
        <label>Cannot Start Before</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Completed_Contribution_Project_Phase__c</fullName>
        <formula>project_cloud__Contribution_Project_Phase__c * project_cloud__Completed_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contribution To Phase Completion (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>project_cloud__Completed_Contribution_Project__c</fullName>
        <formula>project_cloud__Contribution_Project__c * project_cloud__Completed_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contribution To Project Completion (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>project_cloud__Completed_Date__c</fullName>
        <description>This date is populated by the trigger when the completion % is set to 100</description>
        <inlineHelpText>The date the Project Task is marked as 100% complete. The status of the Project Task will not be &apos;Completed&apos; until the project manager checks the completed checkbox</inlineHelpText>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Completed_Hours__c</fullName>
        <description>Sum of the hours completed on the task using the time entry objects</description>
        <inlineHelpText>Summation of the number of hours that have been entered against the Project Task by users via the Time Entry process</inlineHelpText>
        <label>Deprecated (Time_Entry__c Entered Hours)</label>
        <summarizedField>project_cloud__Time_Entry__c.project_cloud__Hours__c</summarizedField>
        <summaryForeignKey>project_cloud__Time_Entry__c.project_cloud__Project_Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Completed_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value that represents how much of a Project Task has been completed. Used in a few places including the Projected Hours calculation</description>
        <inlineHelpText>The completion percentage of a Project Task as estimated by a project team member or a project manager. (NOTE For a Project Task to move to Completed status the project manager  needs to mark the task as complete via the completed checkbox)</inlineHelpText>
        <label>Completion (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>project_cloud__Contribution_Project_Phase__c</fullName>
        <formula>IF(ISPICKVAL(project_cloud__Units__c, &apos;Duration&apos;),
	project_cloud__Duration__c / project_cloud__Project_Phase__r.project_cloud__Duration__c,
/*ELSE*/
	project_cloud__Estimated_Hours__c / project_cloud__Project_Phase__r.project_cloud__Estimated_Hours__c	
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contribution To Phase (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>project_cloud__Contribution_Project__c</fullName>
        <formula>IF(ISPICKVAL(project_cloud__Units__c, &apos;Duration&apos;),
	project_cloud__Duration__c / project_cloud__Project_Phase__r.project_cloud__Project__r.project_cloud__Duration__c,
/*ELSE*/
	project_cloud__Estimated_Hours__c / project_cloud__Project_Phase__r.project_cloud__Project__r.project_cloud__Estimated_Hours__c	
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contribution To Project (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>project_cloud__Directs__c</fullName>
        <description>A count of the number of direct parent relationships the task has</description>
        <inlineHelpText>Represents the number of parent predecessors that the Project Task has</inlineHelpText>
        <label>Predecessors</label>
        <summaryForeignKey>project_cloud__Project_Task_Dependency__c.project_cloud__Child__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Display_Name__c</fullName>
        <description>Append the Task Number to the name field so users with multiple tasks with the same name can differentiate between them</description>
        <formula>Name &amp; &quot;: &quot; &amp; project_cloud__Task_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Project Task name including the Project Task Number.</inlineHelpText>
        <label>Task Name + Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Duration_IsWorking__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Duration In Working Days?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Duration__c</fullName>
        <label>Duration (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__End__c</fullName>
        <description>Calculate the end date of the Task using the estimations and resources.</description>
        <formula>BLANKVALUE(project_cloud__Completed_Date__c, project_cloud__Start__c + project_cloud__Length__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The calculated end date of the Project Task based on the number of resources allocated to the task and the estimated hours of the task</inlineHelpText>
        <label>Calculated End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Estimated_Hours__c</fullName>
        <description>Specify the number of hours estimated to complete the Project Task</description>
        <inlineHelpText>Estimated hours need to be entered as full hours and not as part hours (please do no enter decimal places on estimated hours)</inlineHelpText>
        <label>Estimated Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Health_Image__c</fullName>
        <formula>IMAGE( 
	CASE(project_cloud__Health__c, 
		&quot;Green&quot;, &quot;/img/samples/light_green.gif&quot;, 
		&quot;Yellow&quot;, &quot;/img/samples/light_yellow.gif&quot;, 
		&quot;Red&quot;, &quot;/img/samples/light_red.gif&quot;, 
		&quot;/s.gif&quot;), 
&quot;Health Status&quot;)</formula>
        <label>Health (Traffic Light)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Health_Reason__c</fullName>
        <description>When the Health of a Project Task is changed a reason is required.</description>
        <label>Health Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>project_cloud__Health__c</fullName>
        <description>Determines the health of the Project Task, and defines the Traffic Light formula</description>
        <label>Health</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours_Block__c</fullName>
        <defaultValue>1.00</defaultValue>
        <description>The unit of time the Project Task&apos;s length must fit into. For example if the unit is 4 a task must be 4, 8 12 hours etc. The same rule applies to Time Entry objects.
The value of this field is copied from the value of the Project when the task is created (by the ProjectTaskConfiguration trigger) and once set is read only. This is a system field and should never be visible.</description>
        <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
        <label>Hours Block</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours_In_Day__c</fullName>
        <defaultValue>8</defaultValue>
        <description>This is the value used for the calculation of an Estimated Hours Project Task&apos;s end date. The value of this field is copied from the value of the Project when the task is created (by the ProjectTaskConfiguration trigger) and once set is read only. This is a system field and should never be visible.</description>
        <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
        <label>Hours In Day</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours_Offset__c</fullName>
        <description>Determine the number of hours used by the last day of the project e.g a 12 hour task will have an offset of 4 (if the hours in the day is 8). This is a system field and should never be visible.</description>
        <formula>IF((project_cloud__IsComplete__c || project_cloud__Completed_Percent__c == 1) ||
		project_cloud__Minimum_End__c == project_cloud__End__c ||
		ISPICKVAL(project_cloud__Units__c, &quot;Duration&quot;) ||
		project_cloud__IsAllocated__c,
	/*Any of the above scenarios mean there is no hours offset*/
	0,
/*ELSE*/
	/*Using the Estimated Hours calculate the hours offset*/
	MOD(project_cloud__Estimated_Hours__c + project_cloud__Parents_Hours_Offset__c, project_cloud__Hours_In_Day__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
        <label>Hours Offset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsAllocated__c</fullName>
        <description>Boolean value calculating whether the Project Task has been fully allocated. It is used by other formula fields for better readability. This is a system field and should never be visible.</description>
        <formula>/*When the Length measurement unit is Calendar Allocation and the task has been fully allocated return true*/
ISPICKVAL(project_cloud__Units__c, &apos;Calendar Allocation&apos;) &amp;&amp; project_cloud__Allocated_Hours__c &gt;= project_cloud__Estimated_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
        <label>Calendar Allocating Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsAutonomous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore Parents End Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean value that determines whether a task has been completed or not</description>
        <inlineHelpText>Indicates sign off by the Project Manager that the Project Task is complete</inlineHelpText>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsWorking_Friday__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Boolean value indicating if Friday is a day this task will be worked on. This is a system field and should never be modified.</description>
        <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
        <label>Working Day Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsWorking_Monday__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Boolean value indicating if Monday is a day this task will be worked on. This is a system field and should never be modified.</description>
        <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
        <label>Working Day Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsWorking_Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean value indicating if Saturday is a day this task will be worked on. This is a system field and should never be modified.</description>
        <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
        <label>Working Day Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsWorking_Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean value indicating if Sunday is a day this task will be worked on. This is a system field and should never be modified.</description>
        <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
        <label>Working Day Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsWorking_Thursday__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Boolean value indicating if Thursday is a day this task will be worked on. This is a system field and should never be modified.</description>
        <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
        <label>Working Day Thursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsWorking_Tuesday__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Boolean value indicating if Tuesday is a day this task will be worked on. This is a system field and should never be modified.</description>
        <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
        <label>Working Day Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsWorking_Wednesday__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Boolean value indicating if Wednesday is a day this task will be worked on. This is a system field and should never be modified.</description>
        <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
        <label>Working Day Wednesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Length__c</fullName>
        <description>Return the length of the project task as number of days.
When the estimated hours is larger than the hours in day subtract 1 day from the length, this is because the length includes the Start Date.
The scale was set to 4 in a previous release, but should be 0.</description>
        <formula>IF(project_cloud__IsComplete__c || project_cloud__Completed_Percent__c == 100,
	/*When the task has been marked completed it defines the length*/
	MAX(project_cloud__Completed_Date__c - project_cloud__Start__c, 0),
/*ELSE*/
	/*Check the Units and determine the length or use Minimum End Date if its larger*/
	MAX(
	
		/*Depending on the Units Type get the length*/
		IF(ISPICKVAL(project_cloud__Units__c, &quot;Duration&quot;),
			BLANKVALUE(project_cloud__Duration__c + IF(project_cloud__Duration_IsWorking__c, project_cloud__Non_Working__c, 0) - 1, 0), 
		/*ELSE*/
			IF(project_cloud__IsAllocated__c,
				BLANKVALUE(project_cloud__Allocated_End__c - project_cloud__Start__c, 0),
			/*ELSE*/
				CEILING((project_cloud__Estimated_Hours__c + project_cloud__Parents_Hours_Offset__c) / project_cloud__Hours_In_Day__c) + project_cloud__Non_Working__c - 1
			)
		),
	
		/*Minimum End Date trumps everything*/
		BLANKVALUE(project_cloud__Minimum_End__c - project_cloud__Start__c, 0), 
	
		/*Catch all in case the largest value is negative.*/
		0
	
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System calculation of the number of days of the Project Task based on the estimated hours, and the system settings for hours in a day</inlineHelpText>
        <label>Length</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Minimum_End__c</fullName>
        <description>Override the end date of Project Task using this field. If this date is before the calculated end the calculated end will still be used</description>
        <inlineHelpText>The earliest possible date that this Project Task can finish. The Project Task can still finish after this date but not before. (You might select a value here where you want task to span a week even though there is only 1 days work involved).</inlineHelpText>
        <label>Cannot End Before</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Non_Working_End__c</fullName>
        <defaultValue>0</defaultValue>
        <description>When the Project Task finishes at the end of the day (hours offset 0), a day before a Non Working day, this value is the number of non working days before a child task can start. This is a system field and should never be visible.</description>
        <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
        <label>Non Working End</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Non_Working__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is a system field that should never be updated by the user.
It is a calculation of the number of days that a task is not being worked on based on the start date and the length of the task.
If a Cannot End Before date has been specified, the Non Working days will be 0 unless the Cannot End Before date is the day before a Non Working day</description>
        <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
        <label>Non Working Days Total</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Parents_Complete__c</fullName>
        <formula>project_cloud__Parents_Incomplete__c &lt;= 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Parents Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Parents_End__c</fullName>
        <description>A rollup of the end dates on all the parent Project Tasks. Rollups are not allowed on cross object formulas. So the Parent_End value on the Dependency is a date field not a formula making this possible.</description>
        <inlineHelpText>The end date of the Project Task that acts as the limiting predecessor to this Project Task</inlineHelpText>
        <label>Parents End Date</label>
        <summarizedField>project_cloud__Project_Task_Dependency__c.project_cloud__Parent_End__c</summarizedField>
        <summaryForeignKey>project_cloud__Project_Task_Dependency__c.project_cloud__Child__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Parents_Hours_Offset__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is a system field that should never be updated by the user. It is the largest offset value of all Parent Project Tasks that end on the Parents End Date (Most of the time this should only be one Parent). This value is used to determine how many working hours remain in the first day that this task can worked on</description>
        <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
        <label>Parents Hours Offset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Parents_Incomplete__c</fullName>
        <label>Total Parents Incomplete</label>
        <summaryFilterItems>
            <field>project_cloud__Project_Task_Dependency__c.project_cloud__Parent_Complete__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>project_cloud__Project_Task_Dependency__c.project_cloud__Child__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Phase__c</fullName>
        <description>The Project Phase that the Project Task belongs to</description>
        <inlineHelpText>The Project Phase that the Project Task belongs to</inlineHelpText>
        <label>Project Phase</label>
        <referenceTo>project_cloud__Project_Phase__c</referenceTo>
        <relationshipLabel>Project Tasks</relationshipLabel>
        <relationshipName>Project_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project__c</fullName>
        <description>Field to help with lookup dialogs</description>
        <formula>project_cloud__Project_Phase__r.project_cloud__Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The name of the project the project task is associated with</inlineHelpText>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Projected_Hours__c</fullName>
        <description>The number of projected hours this Project Task will take to complete based on inputed time entries and the current Project Task completion percentage</description>
        <formula>IF(project_cloud__Worked_Hours__c = 0 || project_cloud__Completed_Percent__c = 0,
	project_cloud__Estimated_Hours__c,
	project_cloud__Worked_Hours__c / project_cloud__Completed_Percent__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of projected hours this Project Task will take to complete based on inputed time entries and the current Project Task completion percentage</inlineHelpText>
        <label>Projected Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Resource_Status_Image__c</fullName>
        <description>Image formula field for displaying the resource status  (how much of a project task has been resourced)</description>
        <formula>IMAGE(
	&apos;/resource/&apos; + $Setup.project_cloud__Configuration_Options__c.project_cloud__Namespace__c + IF(ISBLANK($Setup.project_cloud__Configuration_Options__c.project_cloud__Namespace__c), &apos;&apos;, &apos;__&apos;) + &apos;resourcing_resources_zip/icons/resourced-transparent/&apos; &amp; 

	/*Fully allocated because the phase or project has been marked fully subscribed*/
	IF(project_cloud__Project_Phase__r.project_cloud__Subscribed__c || project_cloud__Project_Phase__r.project_cloud__Project__r.project_cloud__Subscribed__c, &apos;all&apos;,

	/*Fully allocated because the task has been marked fully subscribed*/
	IF(project_cloud__Subscribed__c, &apos;all&apos;,
	
	/*Fully allocated because the Calendar Allocations have been fully allocated*/
	IF(project_cloud__Allocated_Hours__c &gt;= project_cloud__Estimated_Hours__c, &apos;all&apos;,
	
	/*Partly allocated because some allocations have been created but not enough to cover the estimated hours*/
	IF(project_cloud__Allocated_Hours__c &gt; 0 &amp;&amp; project_cloud__Allocated_Hours__c &lt; project_cloud__Estimated_Hours__c, &apos;part&apos;,
	
	/*Partly allocated because some subscriptions have been created, but task is not fully subscribed*/
	IF(project_cloud__Subscriptions__c &gt; 0, &apos;part&apos;,
	
	/*Default value is not resourced*/
	&apos;none&apos;

	)))))

	&amp; &apos;.png&apos;,
	/*Alt text*/
	&apos;Resource Status&apos;,
	/*Image dimensions*/
	16, 16
)</formula>
        <label>Resource Status Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Resource_Status_Link__c</fullName>
        <description>Formula that constructs just the url for the Manage Resources page. This is used but the Resource Status field and the Manage Resources button</description>
        <formula>&apos;/apex/&apos; + $Setup.project_cloud__Configuration_Options__c.project_cloud__Namespace__c + IF(ISBLANK($Setup.project_cloud__Configuration_Options__c.project_cloud__Namespace__c), &apos;&apos;, &apos;__&apos;) + &apos;project_task_&apos; + IF(project_cloud__Project_Phase__r.project_cloud__Project__r.project_cloud__IsOnly_Subscriptions__c, &apos;subscriptions&apos;, &apos;resources&apos;) + &apos;?id=&apos; + Id</formula>
        <label>Resource Status URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Resource_Status__c</fullName>
        <description>Image formula field for displaying the resource status  (how much of a project task has been resourced)</description>
        <formula>HYPERLINK(
	project_cloud__Resource_Status_Link__c,
	project_cloud__Resource_Status_Image__c,
	&apos;_top&apos;
)</formula>
        <label>Manage Resources</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Show_External__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show in External View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Sorting_Hash__c</fullName>
        <description>This field is used for sorting Project Tasks in the CCProjex Enterprise default order of Start, End, Name</description>
        <formula>BLANKVALUE(TEXT(project_cloud__Start__c), &apos;9999-99-99&apos;) &amp; TEXT(project_cloud__Parents_Hours_Offset__c) &amp; BLANKVALUE(TEXT(project_cloud__End__c), &apos;9999-99-99&apos;) &amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field can be used to sort Project Tasks using the CCProjex Enterprise default order</inlineHelpText>
        <label>Sorting Column</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Start__c</fullName>
        <description>This is the calculated start date for the task. It is the dependent start date if that exists otherwise it is the autonomous start date (The date the creator of the task wants to get started)</description>
        <formula>/*If the task is complete and the completed date is before the calculated start date use the completed date as the start date to prevent negative length tasks*/
IF(project_cloud__Completed_Date__c &lt; project_cloud__Autonomous_Start__c,
	project_cloud__Completed_Date__c,
/*ELSE*/
	IF(ISBLANK(project_cloud__Parents_End__c) || project_cloud__Autonomous_Start__c &gt; project_cloud__Parents_End__c || project_cloud__IsAutonomous__c,
		/*If there is no Parents End date the task has not parents so use the autonomous start date*/
		project_cloud__Autonomous_Start__c,
	/*ELSE*/
		IF(project_cloud__Completed_Date__c &lt; project_cloud__Parents_End__c + IF(project_cloud__Parents_Hours_Offset__c = 0, 1, 0),
			/*If the autonomous start date is after the parents end date still use the autonomous start*/
			project_cloud__Completed_Date__c,
		/*ELSE*/
			/*Otherwise use the parents end date. Use the day after the parents end date if the parent task finishes at the end of the day*/
			project_cloud__Parents_End__c + IF(project_cloud__Parents_Hours_Offset__c = 0, 1, 0)
		)
	)
)</formula>
        <inlineHelpText>The calculated start date of the Project Task, derived from the Cannot Start Before date, or if this is a dependent task then the Project Task will start after the all the parents have ended.</inlineHelpText>
        <label>Calculated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Status_Enum__c</fullName>
        <description>This is a hidden field used by the Project Phase rollup summary to determine the status of all the tasks in the Project Phase. This is a system field and must not be visible.</description>
        <formula>/*This is s hidden field used by the Project Phase rollup summary to determine the status of all the tasks in the Project Phase*/
/*If the Status of the picklist is &apos;Completed&apos; the value is 0, If the status is &apos;In Progress&apos; the value is 1 and for all other picklist values including &apos;Not Started&apos; the result is 2*/
IF(project_cloud__IsComplete__c,
	0
	,
	IF(project_cloud__Worked_Hours__c &gt; 0 || project_cloud__Completed_Percent__c &gt; 0,
		1
	,
		2
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a system field and must not be visible.</inlineHelpText>
        <label>Status Enum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Status__c</fullName>
        <description>Using the IsComplete checkbox and the rollup summary of Completed hours determine the status of the Project Task</description>
        <formula>IF(project_cloud__IsComplete__c,
	$Label.project_cloud__Project_Status_Completed,
/*ELSE*/ IF(project_cloud__Worked_Hours__c &gt; 0 || project_cloud__Completed_Percent__c &gt; 0,
	IF(TODAY() &gt; project_cloud__End__c,
		$Label.project_cloud__Project_Status_In_Progress_Late,
	/*ELSE*/
		$Label.project_cloud__Project_Status_In_Progress
	),
/*ELSE*/
	IF(TODAY() &gt; project_cloud__Start__c,
		$Label.project_cloud__Project_Status_Not_Started_Late,
	/*ELSE*/
		$Label.project_cloud__Project_Status_Not_Started
	)
))</formula>
        <inlineHelpText>The status of the Project Task, &apos;Not Started&apos; if not yet commenced, &apos;In Progress&apos; if completion percentage is &gt;1% or the task has time recorded against it, and &apos;Completed&apos; once the Project Manger has marked the task as complete</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Subscribed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this indicates the Project Task has been fully subscribed. i.e there are no more subscriptions that need to be created</description>
        <inlineHelpText>When checked, this indicates that you have fully subscribed this project task and have no need to make further subscriptions or calendar allocations to the task.</inlineHelpText>
        <label>Fully Subscribed</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>